[gd_scene load_steps=16 format=2]

[ext_resource path="res://engine/Level.gd" type="Script" id=1]
[ext_resource path="res://units/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://engine/CombatMechanism.tscn" type="PackedScene" id=3]
[ext_resource path="res://engine/ManaBar.gd" type="Script" id=4]
[ext_resource path="res://engine/HealthBar.gd" type="Script" id=5]
[ext_resource path="res://engine/ConditionBar.gd" type="Script" id=6]
[ext_resource path="res://engine/HealthEnemyBar.gd" type="Script" id=7]
[ext_resource path="res://engine/Enemies.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.298039, 0.298039, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.298039, 0.298039, 1 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.235294, 0.235294, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.301961, 0.372549, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.937255, 0.592157, 1 )

[node name="Level" type="Node"]
script = ExtResource( 1 )

[node name="CombatMechanism" parent="." instance=ExtResource( 3 )]

[node name="PanelLayout" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 356.0
margin_bottom = 636.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombatPanel" type="VBoxContainer" parent="PanelLayout"]
margin_right = 352.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )

[node name="EnemyPanel" type="Panel" parent="PanelLayout/CombatPanel"]
margin_right = 352.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Enemies" type="Node" parent="PanelLayout/CombatPanel/EnemyPanel"]
script = ExtResource( 8 )

[node name="EnemyHealthBar" type="ProgressBar" parent="PanelLayout/CombatPanel/EnemyPanel"]
margin_left = 75.0
margin_top = 20.0
margin_right = 275.0
margin_bottom = 35.0
size_flags_vertical = 1
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPanel" type="Panel" parent="PanelLayout/CombatPanel"]
margin_top = 252.0
margin_right = 352.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player" parent="PanelLayout/CombatPanel/PlayerPanel" instance=ExtResource( 2 )]
position = Vector2( 224.51, 127.212 )

[node name="StatusPanel" type="VBoxContainer" parent="PanelLayout"]
margin_top = 504.0
margin_right = 352.0
margin_bottom = 544.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelLayout/StatusPanel"]
margin_right = 352.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatusPanel" type="VBoxContainer" parent="PanelLayout/StatusPanel/HBoxContainer"]
margin_right = 174.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HealthBar" type="ProgressBar" parent="PanelLayout/StatusPanel/HBoxContainer/StatusPanel"]
margin_right = 174.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 50.0
percent_visible = false
script = ExtResource( 5 )

[node name="ManaBar" type="ProgressBar" parent="PanelLayout/StatusPanel/HBoxContainer/StatusPanel"]
margin_top = 14.0
margin_right = 174.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
percent_visible = false
script = ExtResource( 4 )

[node name="ConditionBar" type="ProgressBar" parent="PanelLayout/StatusPanel/HBoxContainer/StatusPanel"]
margin_top = 28.0
margin_right = 174.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 7 )
percent_visible = false
script = ExtResource( 6 )

[node name="ExpPanel" type="Panel" parent="PanelLayout/StatusPanel/HBoxContainer"]
margin_left = 178.0
margin_right = 352.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SkillPanel" type="HBoxContainer" parent="PanelLayout"]
margin_top = 548.0
margin_right = 352.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SkillPanel1" type="Panel" parent="PanelLayout/SkillPanel"]
margin_right = 67.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SkillPanel2" type="Panel" parent="PanelLayout/SkillPanel"]
margin_left = 71.0
margin_right = 138.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SkillPanel3" type="Panel" parent="PanelLayout/SkillPanel"]
margin_left = 142.0
margin_right = 209.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SkillPanel4" type="Panel" parent="PanelLayout/SkillPanel"]
margin_left = 213.0
margin_right = 280.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SkillPanel5" type="Panel" parent="PanelLayout/SkillPanel"]
margin_left = 284.0
margin_right = 352.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
